fixed bug(menu are hidden behind video)

--- a/style.css
+++ b/style.css
@@ -556,6 +556,7 @@ body {
     left: 0;
     width: 100%;
     background-color: black;
+    z-index: 9000;
 }
 
 @media screen and (max-width: 1050px) {
